# argus

./: .env.deploy.example  .env.example  .env.production.example  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini
alerts/: admin.py  apps.py  attention.py  backup_status.py  cases.py  classifier.py  cleanup.py  command_locks.py  crypto.py  gmail.py  gmail_oauth.py  gmail_polling.py  gmail_polling_views.py  health.py  middleware.py  mobile.py  mobile_archive.py  mobile_service_log.py  models.py  parser.py  permissions.py  reminders.py  security.py  seed_data.py  server_timers.py  service_health.py  signals.py  telegram.py
config/: jazzmin.py  settings.py  test_settings.py  urls.py
deploy/: install-ops.sh  ops-restore.md
docs/: production-operations.md
templates/: base.html
tests/: test_admin_config.py  test_auto_deploy_script.py  test_background_job_queue.py  test_check_gmail_command.py  test_classifier.py  test_command_locks.py  test_crypto.py  test_deploy_notifications.py  test_gmail.py  test_gmail_oauth_admin.py  test_health.py  test_health_notify_script.py  test_local_qa_flow.py  test_mobile_gmail_check_routes.py  test_mobile_pagination.py  test_mobile_panel.py  test_parser.py  test_quiet_hours.py  test_service_health.py  test_telegram.py  test_telegram_admin_commands.py  test_telegram_db_connections.py  test_telegram_deploy_command.py  test_telegram_deploy_ops.py  test_telegram_git_status.py  test_telegram_handlers_edges.py  test_telegram_help_command.py  test_telegram_messages.py  test_telegram_runtime.py  test_unread_reminders.py
(+129 files in other folders)
