[project]
name = "argus"
version = "0.1.0"
description = ""
authors = [
    {name = "maxx-home-desktop",email = "maxpetrikin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "django-jazzmin (>=3.0.5,<4.0.0)",
    "google-api-python-client (>=2.198.0,<3.0.0)",
    "google-auth (>=2.55.1,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)",
    "python-telegram-bot (>=22.8,<23.0)",
    "psycopg[binary] (>=3.2,<4.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
